# bossboard

./: .env.example  .gitignore  AGENT_TEAM_SETUP.md  CLAUDE.md  CLEANUP_PROMPT.md  LAUNCH-CHECKLIST.md  QUICK_REFERENCE.md  bb-v3.0.md  eslint.config.mjs  final-hardening-prompt.md  final-hotfix-prompt.md  final-polish-prompt-v2-additions.md  final-polish-prompt-v3-additions.md  final-polish-prompt.md  hotfix-2-ui-polish.md  hotfix-2-v2-ui-polish.md  hotfix-3-routing-topbar-context.md  hotfix-tauri-titlebar.md  metadata-developers-fix.md  next.config.ts  package-lock.json  package.json  pre-launch-polish-prompt.md  sentry.client.config.ts  sentry.server.config.ts  vercel.json  week1-tauri-foundation.md  week2-library-auth.md  week3-agents-dm-mcp.md  week4-final-features.md
.claude/: settings.local.json
.github/: dependabot.yml
messages/: en.json
public/: llms.txt  robots.txt
public/.well-known/: security.txt
scripts/: migrate-supabase-to-b2.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  mcp_server.rs
src-tauri/src/commands/: backup.rs  device.rs  fs.rs  keychain.rs  metadata.rs  mod.rs  path_safety.rs  token_usage.rs  translations.rs  trash.rs  watcher.rs  workspace.rs
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  robots.ts  sitemap.ts
src/app/(admin)/: layout.tsx
src/app/(auth)/: layout.tsx
src/components/: theme-loader.tsx
src/config/: credits.ts  guide-templates.ts  plans.ts
src/hooks/: use-active-tab.ts  use-business.ts  use-dashboard.ts  use-dm-panel.ts  use-folders.ts  use-refresh-rate-limit.ts  use-role.ts  use-sop-detail.ts  use-sops.ts
src/i18n/: config.ts
src/lib/: admin-auth.ts  admin-i18n.ts  agents.ts  beta-features.ts  beta.ts  coupons.ts  dm.ts  email.ts  encryption.ts  error-tracking.ts  folder-permissions.ts  google-calendar.ts  i18n.ts  launch-discount.ts  markdown-to-tiptap.ts  notifications.ts  paddle.ts  plan-gate.ts  promotions.ts  queries.ts  rate-limit.ts
src/messages/: en.json  ko.json
src/providers/: query-provider.tsx
src/types/: agents.ts  sops.ts
supabase/: debug_rls.sql  full_migration.sql
supabase/migrations/: 001_profiles.sql  002_businesses.sql  003_reviews.sql  004_generated_content.sql  005_ai_usage.sql  006_social_posts.sql  007_scripts.sql  008_subscriptions.sql  009_business_profile.sql  010_waitlist.sql  20260314000000_full_schema.sql  20260315000000_checklists_add_columns.sql  20260315100000_sop_reads_update_policy.sql  20260315200000_fix_rls_recursion.sql  20260316000000_add_folders.sql  20260316100000_phase2_3.sql  20260316200000_onboarding_paths.sql  20260316300000_sort_order.sql  20260316400000_todos_worklog_scheduling.sql  20260317000000_final_fixes.sql  20260317100000_soft_delete.sql  20260317200000_sops_add_business_id.sql  20260327000000_wiki_uploads_storage.sql  20260327100000_invites_upgrade.sql  20260328000000_sops_copy_protected.sql  20260328100000_journal_entries.sql  20260328200000_bulletin_board.sql  20260328300000_shared_links.sql  20260328400000_fulltext_search.sql  20260328500000_feedback_table.sql  20260328600000_agent_api.sql  20260328700000_folder_permissions.sql  20260401000000_settings_enhancements.sql  20260402000000_feedback_read_status.sql  20260402100000_external_api_keys.sql  20260403000000_business_members.sql  20260403100000_member_access.sql  20260403200000_board_attachments.sql  20260403300000_agent_key_name.sql  20260403400000_sop_last_edited_by.sql  (+30 more)
(+398 files in other folders)
